unzip downloads from drive.

--- a/tutorials/00_download_data.ipynb
+++ b/tutorials/00_download_data.ipynb
@@ -24,7 +24,6 @@
    "outputs": [],
    "source": [
     "from helpers import download_dataset\n",
-    "\n",
     "download_dataset('info')  # returns information about the available datasets"
    ]
   },
@@ -36,6 +35,7 @@
    "outputs": [],
    "source": [
     "# downloads the phy output and stimulus info\n",
+    "from helpers import download_dataset\n",
     "download_dataset('chronic_stimulus',output_path='./data')"
    ]
   },
@@ -47,6 +47,7 @@
    "outputs": [],
    "source": [
     "# downloads the raw data\n",
+    "from helpers import download_dataset\n",
     "download_dataset('chronic_raw',output_path='./data')"
    ]
   }
