--- a/tutorials/01_file_formats_plot_raw.ipynb
+++ b/tutorials/01_file_formats_plot_raw.ipynb
@@ -27,15 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "45ab79d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded AL032_2019-11-21_stripe192-natIm_g0_t0.imec1000.ap.bin with 58903291 samples and 97 channels.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np # to map the file and handle data types\n",
     "from pathlib import Path # to find the file and get the number of samples\n",
     "\n",
-    "foldername = Path('./data/AL032')  # path to folder containing the binary file\n",
+    "foldername = Path('data/AL032_2019-11-21_stripe192-natIm_g0')  # path to folder containing the binary file\n",
     "# try to find the binary file (has extension .bin)\n",
     "fname = list(foldername.rglob('*.bin'))\n",
     "if not len(fname): # display an error message if the file is not found.\n",
@@ -72,10 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a12e94f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nSavedChans=97\n",
+      "\n",
+      "Read the number of channels [97] from the metadata file.\n"
+     ]
+    }
+   ],
    "source": [
     "meta_fname = list(foldername.rglob('*.meta'))[0] # find the metadata file\n",
     "\n",
@@ -109,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8d2b8bb2",
    "metadata": {},
    "outputs": [],
@@ -120,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 6,
    "id": "be79bcf2",
    "metadata": {},
    "outputs": [
@@ -139,7 +157,7 @@
     "# we can now plot a subset of the data\n",
     "seconds_to_plot = 1\n",
     "offset = 20\n",
-    "\n",
+    "sampling_rate = meta['imSampRate']\n",
     "data_chunk = dat[int(offset*sampling_rate):int((offset+seconds_to_plot)*sampling_rate)]\n",
     "\n",
     "import pylab as plt  # for plotting\n",
@@ -177,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "00acdb7e",
    "metadata": {},
    "outputs": [
@@ -271,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "id": "f66a0fc0",
    "metadata": {},
    "outputs": [
@@ -324,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "id": "d6093466",
    "metadata": {},
    "outputs": [
@@ -353,6 +371,56 @@
     "plt.xlabel('Time (s)')\n",
     "plt.ylabel('Channel number')\n",
     "plt.xlim([offset+0.2,offset+0.3]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1b70b22",
+   "metadata": {},
+   "source": [
+    "Using ``ipywidgets`` you can build your own interactive visualization to look at data in different ways."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3ebf9bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampling_rate = meta['imSampRate']\n",
+    "duration = 0.1 # how long to visualize\n",
+    "\n",
+    "# function to filter and apply CAR data, we are using the conversion factor from above\n",
+    "def convert_filter_and_car(X):\n",
+    "    # use the conversion factor from above\n",
+    "    Xf = filter_data(X*conversion_factor)\n",
+    "    # remove the median voltage across all channels to perform global CAR\n",
+    "    return (Xf.T - np.median(Xf,axis = 1)).T    \n",
+    "\n",
+    "# this function will load a chunk of data and apply the filters\n",
+    "def get_chunk(offset, duration = duration):\n",
+    "    chunk = dat[int(offset*sampling_rate):int((offset+duration)*sampling_rate)]\n",
+    "    return convert_filter_and_car(chunk)\n",
+    "\n",
+    "# use the ipympl magic to have interactivity\n",
+    "%matplotlib ipympl\n",
+    "# static plot for chunk zero\n",
+    "plt.figure(figsize = [10,4])\n",
+    "im = plt.imshow(get_chunk(0).T ,aspect = 'auto',\n",
+    "            clim = [-100,100], # color limits\n",
+    "            cmap  = 'RdBu_r',\n",
+    "            extent = [offset, offset+seconds_to_plot,0,fdata_chunk.shape[1]])\n",
+    "plt.colorbar(shrink=0.3,label='$\\mu$V')\n",
+    "plt.xlabel('Time (s)')\n",
+    "plt.ylabel('Channel number');\n",
+    "\n",
+    "# This function will be ran each time the slider moves, it will load, filter data and pass it to the plot\n",
+    "from ipywidgets import interact, FloatSlider\n",
+    "@interact(offset = FloatSlider(min=0, max = len(dat-1)/sampling_rate - duration, interval = 0.05))\n",
+    "def _plot_interact(offset):\n",
+    "    chunk = get_chunk(offset)\n",
+    "    im.set_data(chunk.T)"
    ]
   }
  ],
