--- a/tutorials/04_running_spikesorting.ipynb
+++ b/tutorials/04_running_spikesorting.ipynb
@@ -168,7 +168,7 @@
     "    metric_names=['firing_rate', 'presence_ratio', 'snr', 'isi_violation', 'amplitude_cutoff']\n",
     "    metrics = si.compute_quality_metrics(analyzer, metric_names=metric_names)\n",
     "\n",
-    "    si.export.export_to_phy(sorting_analyzer=analyzer, output_folder=base_folder/'phy_output')"
+    "    si.exporters.export_to_phy(sorting_analyzer=analyzer, output_folder=base_folder/'phy_output')"
    ]
   }
  ],
