fix typos in loading. can load catgt files

--- a/tutorials/04_running_spikesorting.ipynb
+++ b/tutorials/04_running_spikesorting.ipynb
@@ -134,7 +134,7 @@
     "for stream in stream_names:\n",
     "    if not stream.endswith('.ap'):\n",
     "        continue    \n",
-    "    raw_rec = si.read_spikeglx(spikeglx_folder, stream_name='imec0.ap', load_sync_channel=False)\n",
+    "    raw_rec = si.read_spikeglx(spikeglx_folder, stream_name=stream_names, load_sync_channel=False)\n",
     "    # frequency filter\n",
     "    rec1 = si.highpass_filter(raw_rec, freq_min=FREQ_LOW)\n",
     "    bad_channel_ids, channel_labels = si.detect_bad_channels(rec1)\n",
@@ -155,20 +155,19 @@
     "    analyzer = si.create_sorting_analyzer(sorting, rec, sparse=True, format=\"memory\")\n",
     "    # compute waveforms \n",
     "    analyzer.compute(\"random_spikes\", method=\"uniform\", max_spikes_per_unit=500)\n",
-    "    analyzer.compute(\"waveforms\",  ms_before=1.5,ms_after=2., **job_kwargs)\n",
+    "    analyzer.compute(\"waveforms\",  ms_before=1.5,ms_after=1.5., **job_kwargs)\n",
     "    analyzer.compute(\"templates\", operators=[\"average\", \"median\", \"std\"])\n",
     "    analyzer.compute(\"noise_levels\")\n",
     "    analyzer.compute(\"correlograms\")\n",
     "    analyzer.compute(\"unit_locations\")\n",
     "    analyzer.compute(\"spike_amplitudes\", **job_kwargs)\n",
-    "    analyzer.compute(\"template_similarity\")\n",
     "    # save\n",
     "    analyzer_saved = analyzer.save_as(folder=base_folder / \"analyzer\", format=\"binary_folder\")\n",
     "\n",
     "    metric_names=['firing_rate', 'presence_ratio', 'snr', 'isi_violation', 'amplitude_cutoff']\n",
     "    metrics = si.compute_quality_metrics(analyzer, metric_names=metric_names)\n",
-    "\n",
-    "    si.exporters.export_to_phy(sorting_analyzer=analyzer, output_folder=base_folder/'phy_output')"
+    "    from spikeinterface.exporters import export_to_phy\n",
+    "    export_to_phy(sorting_analyzer=analyzer, output_folder=base_folder/'phy_output')"
    ]
   }
  ],
